# vocabulary-parser

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  push-to-github.sh  pyproject.toml  requirements.txt  run.sh
app/: __init__.py  main.py  parsing.py  reword_format.py
app/extractors/: __init__.py  doc_extractor.py  docx_extractor.py  pdf_extractor.py
app/static/: app.js  styles.css
app/templates/: index.html
public/: app.js  index.html  styles.css
src/: server.ts  types.ts
src/routes/: parse.ts
src/services/: convertDocToDocx.ts  extractText.ts  formatTxt.test.ts  formatTxt.ts  parsePairs.test.ts  parsePairs.ts
src/services/__fixtures__/: sample.txt
tests/: __init__.py  conftest.py  test_api.py  test_docx_extractor.py  test_parsing.py  test_reword_format.py
